# Madara-AppChain-CLI

./: .gitignore  README.md  go.mod  go.sum  main.go
genesis-modifier/: .gitignore  Cargo.toml  README.md
genesis-modifier/src/: main.rs
madcliup/: appchain_genesis.json  install
pkg/: config.go  crypto.go  deploy-account.go  deploy_account_test.go  genesis.go  init.go  install.go  install_appchain_evm.go  install_madara.go  node.go  starknet-account.go  starknet-provider.go  start.go  transfer.go  types.go  update_chain_spec.go
